# silber

./: .gitignore  BfsSearcher.cpp  BfsSearcher.h  BinarySearcher.cpp  BinarySearcher.h  CMakeLists.txt  ClientProcCommunicator.cpp  ClientProcCommunicator.h  DfsSearcher.cpp  DfsSearcher.h  Dockerfile  ISearcher.hpp  ISemaphore.h  Message.h  OSSemaphore.cpp  OSSemaphore.h  ProcCommunicator.cpp  ProcCommunicator.h  README.md  ServerProcCommunicator.cpp  ServerProcCommunicator.h  SharedMemoryReceiver.cpp  SharedMemoryReceiver.h  SharedMemorySender.cpp  SharedMemorySender.h  SilberLogging.cpp  SilberLogging.h  SlotRegistry.cpp  SlotRegistry.h  Types.hpp  build.sh  main.cpp  tests.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_mac.yml  debug-linux_win_macos.yml  linux_build.yml  release-linux_win_macos.yml  windows_build.yml
